--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=Demo_Doan
 
 #chưa kết nối đến database
-spring.datasource.url=jdbc:mysql://localhost:3306/doan?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/DoAn?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=ReAn296Z@
+spring.datasource.password=
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
