--- a/frontend-ie103/package.json
+++ b/frontend-ie103/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.2",
     "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
+    "lib-utils": "^0.0.4",
+    "lib-utils-ts": "^0.0.0-test",
+    "lucide-react": "^0.509.0",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
