--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,9 +3,11 @@ spring.application.name=Demo_Doan
 #chưa kết nối đến database
 spring.datasource.url=jdbc:mysql://localhost:3306/DoAn?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=123456
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
+logging.level.org.springframework=DEBUG
+logging.level.com.yourpackage=DEBUG
